# tar-parser.rs

./: .travis.yml  COPYING  Cargo.toml  README.md  panic  tar.specs
example/: Cargo.toml  test.tar
example/src/: main.rs
examples/: Cargo.toml
examples/fuzzed/: Cargo.toml
examples/fuzzed/crashes/: 1.tar
examples/fuzzed/src/: main.rs
examples/simple/: Cargo.toml  long.tar  macos.tar  test.tar
examples/simple/src/: main.rs
fuzzed/: Cargo.toml
fuzzed/src/: main.rs
src/: lib.rs  parser.rs
