[package]
name          = "tar-parser"
version       = "0.4.1"
authors       = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description   = "tar archive parser using nom"
repository    = "https://github.com/keruspe/tar.rs"
documentation = "https://docs.rs/tar-parser/"
readme        = "README.md"
keywords      = ["tar","archive","parser","nom"]
categories    = ["filesystem","parsing"]
license       = "MIT"

[lib]
name="tar"

[dependencies]
nom = "^2.0.1"

[badges]
travis-ci = { repository = "Keruspe/tar-parser.rs" }
