[package]
name          = "tar-parser"
version       = "0.5.0"
edition       = "2018"
authors       = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description   = "tar archive parser using nom"
repository    = "https://github.com/keruspe/tar.rs"
documentation = "https://docs.rs/tar-parser/"
readme        = "README.md"
keywords      = ["tar","archive","parser","nom"]
categories    = ["filesystem","parser-implementations"]
license       = "MIT"

[lib]
name="tar"

[dependencies]
nom = "^4.0"

[badges]
travis-ci = { repository = "Keruspe/tar-parser.rs" }
