[package]
name    = "tar-example"
version = "0.2.1"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]

[dependencies]
nom = "^1.1.0"

[dependencies.tar-parser]
path = "../.."

[dependencies.afl-plugin]
git = "https://github.com/frewsxcv/afl.rs"

[dependencies.afl]
git = "https://github.com/frewsxcv/afl.rs"
